fix(blog): blog's content not offscreen on smaller devices

--- a/app/styles/shared.css
+++ b/app/styles/shared.css
@@ -226,6 +226,10 @@
   letter-spacing: 2px;
   font-size: 24px;
 }
+.uniq-blog-content-container {
+  display: block;
+  word-break: break-word;
+}
 
 @media only screen and (min-width: 1140px) {
   .hamburgerMenu-nav-show {
